<resources>
    <string name="app_name">Brightwing</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="powerd_by">powered by BRIGHTWING</string>
    <string name="email_id">Email ID</string>
    <string name="send_password">Send Password</string>

    <!-- Hints. -->
    <string name="your_name">Enter name</string>
    <string name="your_email">Enter email id</string>
    <string name="password">Password</string>
    <string name="your_phone">Enter phone no</string>
    <string name="your_class">Enter class</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_text">Please enter your registered email id below to reset your password.</string>
    <string name="dont_have_acc">Don\'t have an account?</string>
    <string name="sign_up_underline"><u>Sign-Up</u></string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="login_again">Login again</string>

    <string name="valid_email_id">Valid email id</string>
    <string name="please_enter_valid_email_id">Please enter valid email id</string>
    <string name="empty_emailid">This is mandatory field. Please enter your email address.</string>
    <string name="empty_password">This is mandatory field. Please enter password.</string>

    <string name="empty_name">This is mandatory field. Please enter name.</string>
    <string name="empty_phone">This is mandatory field. Please enter phone no.</string>

    <string name="linksent">Link Sent!</string>
    <string name="resend_link">Resend the link</string>
    <string name="back">Back</string>
    <string name="verification_mail">Please check your email. We\'ve sent you a link. Just click on it and set your new password.</string>
    <string name="user_not_exist">User doesn\'t exist</string>

    <string name="videolist_error">Looks like they haven’t added \n anything to this list yet!</string>
    <string name="subscription_error">Looks like you haven’t subscribed \nany class yet!</string>
    <string name="videolist_explore">Explore another classes to discover more \nsubjective videos, and grow your self.</string>

    <string name="quiz_text">Their is quiz for this video \nis avalible for download</string>
    <string name="download_quiz">Download Quiz</string>
    <string name="play_video">Play Video</string>
    <string name="pay">Pay</string>
    <string name="subscribe_now">Subscribe now</string>
    <string name="havent_subscribe">You haven\'t subscribe for this \nclass to watch this videos.</string>
    <string name="token_mistmacth">User token mistmatch \n Please login again</string>
    <string name="subscribe_home">Subscribed</string>
    <string name="unsubscribe_home">Unsubscribed</string>
    <string name="video_details">Video Details</string>
    <string name="payment_successfull">Payment successful</string>
    <string name="payment_cancel">Payment cancelled</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="update_profile_successfull">Profile successfully updated</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="please_wait">Please wait</string>
    <string name="confirm_logout">Confirm Logout ?</string>
    <string name="message_exit">Are you sure you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="subscriptions">Subscription</string>

    <string name="msg_otp1">We have sent a comfirmation code \nYou should get it soon</string>
    <string name="awesome">Awesome,Thanks!</string>
    <string name="proceed">Proceed</string>
    <string name="error_enter_otp">Please enter OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="already_subscribed">You already subscribed this class</string>
    <string name="your_plan">Your plan</string>

    <string name="Rs">\u20B9</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>


</resources>