<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_solid_white_bg"
    android:gravity="center">

    <ImageView
        android:id="@+id/ivExit"
        android:layout_width="@dimen/dp25"
        android:layout_height="@dimen/dp25"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/dp15"
        android:layout_marginEnd="@dimen/dp10"
        app:srcCompat="@drawable/close_black" />

    <ImageView
        android:layout_width="@dimen/dp35"
        android:layout_height="@dimen/dp35"
        android:layout_marginTop="-5dp"
        app:srcCompat="@drawable/lock" />

    <com.paradisetechnologies.brithwine.fonts.MyTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp15"
        android:gravity="center_horizontal"
        android:text="@string/quiz_text"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        app:fontface="qmedium"/>

    <com.paradisetechnologies.brithwine.fonts.MyTextView
        android:id="@+id/tvDownloadQuiz"
        style="@style/BtnClick"
        android:layout_marginTop="@dimen/dp22"
        android:text="@string/download_quiz"
        android:textSize="@dimen/sp16"
        android:textColor="@color/white"
        app:fontface="qmedium"/>

    <com.paradisetechnologies.brithwine.fonts.MyTextView
        android:id="@+id/tvPlayVideo"
        style="@style/BtnClick"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp25"
        android:text="@string/play_video"
        android:textSize="@dimen/sp16"
        android:textColor="@color/white"
        app:fontface="qmedium"/>


</LinearLayout>