<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".startupActivity.ActivityForgotPassword_LinkSent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <ImageView
            android:id="@+id/ivBackArrow"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/back_arrow"
            android:tint="@color/black"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/brithwine_logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.paradisetechnologies.brithwine.fonts.MyTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="Forgot Password?"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp23"
                        app:fontface="qbold"/>

                </LinearLayout>

                <com.paradisetechnologies.brithwine.fonts.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/linksent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp14"
                    app:fontface="qmedium"/>

                <com.paradisetechnologies.brithwine.fonts.MyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/verification_mail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp14"
                    app:fontface="qmedium"/>

                <Button
                    android:id="@+id/btnResendMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/border_red"
                    android:gravity="center"
                    android:text="@string/resend_link"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp13" />

                <com.paradisetechnologies.brithwine.fonts.MyTextView
                    android:id="@+id/tvBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp15"
                    android:paddingBottom="@dimen/dp15"
                    android:layout_marginLeft="@dimen/dp10"
                    android:layout_marginTop="@dimen/dp35"
                    android:layout_marginRight="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp30"
                    android:text="@string/back"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    app:fontface="qbold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>